--- a/public/input.html
+++ b/public/input.html
@@ -617,7 +617,7 @@ if(localStorage.getItem('isLoggedIn') !== 'true') {
 </head>
 <body>
  <div class="navbar">
-    <img src="/images/abhitech-logo.png" alt="Company Logo">
+    <img src="/public/images/abhitech-logo.png" alt="Company Logo">
     <h1>COAL BLENDING RATIO</h1>
     <div class="nav-buttons">
       <button onclick="window.location.href='slagging_coal_page.html'">Calculation</button>
@@ -1100,3 +1100,4 @@ if(localStorage.getItem('isLoggedIn') !== 'true') {
 
 </body>
 </html>
+
